[tool.poetry]
name = "discord-songwhip"
version = "0.1.0"
description = "discord bot to implement songwhip's api in-app"
authors = ["ryleu <69326171+ryleu@users.noreply.github.com>"]
license = "AGPL-v3.0-or-greater"
readme = "README.md"
packages = [{include = "discord_songwhip"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py-interactions = "^5.13.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pylance = "^0.8.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
